--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <center>
     <button type="button" id="jump">JUMP!!</button>
     <button type="button" id="stop">End!!</button>
-    <button type="button" id="restart" onclick="window.location.reload();">RESTART!!</button>
+    <button type="button" id="restart">RESTART!!</button>
     <p id="occ"></p>
     <p id="speed"></p>
     <script type="text/javascript" src="index.js"></script>
