fixed restart event listener

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h1>Dodge the Bullets!</h1>
         <canvas id="Mycanvas" width="900" height="300" style="border: solid 3px black;"></canvas>
     <center>
+    <button type="button" id="restart">Start!!</button>
     <button type="button" id="jump">JUMP!!</button>
     <button type="button" id="stop">End!!</button>
-    <button type="button" id="restart">RESTART!!</button>
     <p id="occ"></p>
     <p id="speed"></p>
     <script type="text/javascript" src="index.js"></script>
